tests/baselines/reference/newExpressionWithCast.errors.txt
tests/cases/compiler/newExpressionWithCast.ts(4,12): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
tests/cases/compiler/newExpressionWithCast.ts(8,13): error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
tests/cases/compiler/newExpressionWithCast.ts(8,17): error TS1109: Expression expected.
tests/cases/compiler/newExpressionWithCast.ts(8,18): error TS2304: Cannot find name 'any'.


==== tests/cases/compiler/newExpressionWithCast.ts (4 errors) ====
    
    function Test() { }
    // valid but error with noImplicitAny
    var test = new Test();
               ~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    
    function Test2() { }
    // parse error
    var test2 = new <any>Test2();
                ~~~~~~~~~~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'boolean' and 'void'.
                    ~
!!! error TS1109: Expression expected.
                     ~~~
!!! error TS2304: Cannot find name 'any'.
    
    function Test3() { }
    // valid with noImplicitAny
    var test3 = new (<any>Test3)();
    
    